# umivarcalextract

./: Cargo.toml  README.md  build.rs
src/: cli.rs  error.rs  lib.rs  main.rs
test_data/: test.bam.bai
